--- a/ShuttleOff/www/css/index.css
+++ b/ShuttleOff/www/css/index.css
@@ -475,17 +475,15 @@ hr {
 section.special, article.special {
     text-align: center;
 }
-
-header h1 {
-    color: #c6a700;
-    text-align: center;
-}
-
 header p {
     color: #ffffff;
     position: relative;
     margin: 0 0 1.5em 0;
     text-align: center;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 header h2 + p {
@@ -507,7 +505,6 @@ header h6 + p {
     margin-top: -0.6em;
     line-height: 1.5em;
 }
-
 @media screen and (max-width: 980px) {
     header br {
         display: none;
@@ -1027,12 +1024,17 @@ button,
 }
 
 /* Header */
-#header img {
-    margin-bottom: -1%;
-    width: 6%;
-    height: 6%;
+.logo_container{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 10px;
 }
-
+.logo_container .logo
+{
+    width: 20%;
+}
 #header h1 {
     font-size: 3.25em;
     margin: 0 0 0.55em 0;
