--- a/ShuttleOff/www/css/dashboard.css
+++ b/ShuttleOff/www/css/dashboard.css
@@ -718,20 +718,13 @@ input:checked + .slider .pm{
     background-color: var(--primary-color);
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    padding: 10px;
+    justify-content: center;
 }
 
 .mod-header h2
 {
+    font-size: 5vw;
     color: whitesmoke;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.mod-header h2:hover
-{
-    opacity: 0.7;
 }
 
 .mod-content
@@ -794,41 +787,48 @@ input:checked + .slider .pm{
     width: 100%;
 }
 
-#mod-det .loc_container h3
+#det_wrap{
+    position: absolute;
+    width: 100%;
+    height:80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+#mod-det #loc_name, #loc_owner,#loc_reg,#loc_city,#loc_prov,#loc_add 
 {
     color: var(--primary-color);
+    font-size: 5vw;
+    max-height: 40px;
     padding: 5px 0 5px 0;
 }
 
-#mod-det .loc_container .mod-button
+.mod-button
 {
-    position: relative;
-    height: 100%;
+    position: absolute;
+    top: 80%;
+    height: 20%;
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
-    padding: 10px;
+    justify-content: center;
 }
 
-#mod-det .loc_container .mod-button .mod-btn-container
+.mod-button .mod-btn-container
 {
-    width: 90%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    background-color:  #19af64;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border-radius: 10px;
-    cursor: pointer;
     max-height: 70px;
-    transition: 0.5s;
 }
 
-#mod-det .loc_container .mod-button .mod-btn-container:hover
+/* #mod-det .loc_container .mod-button .mod-btn-container:hover
 {
     background-color:  #18c26d;
 }
@@ -836,9 +836,9 @@ input:checked + .slider .pm{
 #mod-det .loc_container .mod-button .mod-btn-container:active
 {
     background-color: #1cdf7d;
-}
+} */
 
-#mod-det .loc_container .mod-button .mod-btn-container i
+/* #mod-det .loc_container .mod-button .mod-btn-container i
 {
     color: whitesmoke;
 }
@@ -846,4 +846,82 @@ input:checked + .slider .pm{
 #mod-det .loc_container .mod-button .mod-btn-container h3
 {
     color: whitesmoke;
+} */
+
+.btn_create_res{
+    display: flex;
+    height: 100%;
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color:  #19af64;
+    color: whitesmoke; 
+    padding: 5px;
+    border-radius: 10px;
+    margin: 5px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.btn_create_res i{
+    font-size: 5vw;
+}
+
+.btn_create_res:hover
+{
+    background-color:  #18c26d;
+}
+
+.btn_create_res:active
+{
+    background-color: #1cdf7d;
+}
+
+.btn_cancel_res{
+    display: flex;
+    width:50%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgb(255, 44, 44);
+    color: whitesmoke;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 5px;
+    transition:0.5s;
+    cursor: pointer;
+}
+.btn_cancel_res i{
+    font-size: 5vw;
+}
+.btn_cancel_res:hover
+{
+    background-color:rgb(255, 31, 31);
+}
+
+.btn_cancel_res:active
+{
+    background-color:rgb(255, 20, 20);
+}
+
+/*Prevent fonts and blocks from breaking*/
+
+@media all and (min-width: 430px) 
+{
+    .mod-header h2
+    {
+        font-size: 22px;
+    }
+    #mod-det #loc_name, #loc_owner,#loc_reg,#loc_city,#loc_prov,#loc_add{
+        font-size: 22px;
+    }
+    .btn_cancel_res i,.btn_create_res i{
+        font-size: 22px;
+    }
+}
+
+@media all and (max-aspect-ratio:4/5) and (max-width: 430px)
+{
+    #mod-det #loc_name, #loc_owner,#loc_reg,#loc_city,#loc_prov,#loc_add{
+        font-size: 15px;
+    }
 }
