Profile Changes. No .js

--- a/ShuttleOff/www/css/profile.css
+++ b/ShuttleOff/www/css/profile.css
@@ -142,7 +142,7 @@ body
 .profile-header{
     position: absolute;
     width: 100%;
-    height: 20%;
+    height: 30%;
 }
 .profile-header-wrapper{
     position: relative;
@@ -153,38 +153,69 @@ body
     position: absolute;
     top: 0;
     width: 100%;
-    height: 80%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
 }
 
+.profile-logo-container>h5{
+    padding: 0.3rem;
+}
+
 .profile-logo-container i{
     color: grey;
     font-size: 3.4rem;
-    padding-bottom: 0.3rem;
 }
 
-.profile-joined-container{
+.join-loc-container{
     position: absolute;
-    display: flex;
     width: 100%;
-    top: 80%;
-    height: 20%;
+    top: 70%;
+    height: 30%;
+}
+
+.join-loc-wrap{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.profile-joined-container i {
+.profile-joined-container{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-joined-container > i {
     font-size: 1rem;
     padding-right: 0.3rem;
 }
 
+.profile-location-container{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.profile-location-container>i{
+    font-size: 1rem;
+    padding-right: .3rem;
+}
+
 .profile-body{
     position: absolute;
-    top: 20%;
-    height: 80%;
+    top: 30%;
+    height: 70%;
     width: 100%;
 }
 .profile-detail-container{
@@ -195,7 +226,6 @@ body
     flex-direction: column;
     align-items: center;
     overflow: scroll;
-    margin-top: 1.2rem;
 }
 .profile-content{
     display: flex;
@@ -209,7 +239,7 @@ body
 .profile-content h3{
     display: flex;
     align-self: flex-start;
-    font-size: 1.15rem;
+    font-size: 1.1rem;
     color: var(--primary-color);
 }
 .profile-content input{
@@ -233,4 +263,116 @@ body
     cursor: pointer;
     display: flex;
     align-self: flex-start;
+}
+
+/*Edit Profile Wrap*/
+.edit-profile{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    transition: 0.3s linear;
+}
+
+.edit-profile-wrapper{
+    position: relative;
+    background-color: var(--secondary-color);
+    width: 100%;
+    height: 100%;
+}
+
+.edit-profile-header{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 5%;
+}
+
+.edit-profile-header-wrapper{
+    position: relative;
+    width: 100%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-items: center;
+    background-color: #068a8a;
+    color: whitesmoke;
+}
+
+.edit-profile-header-wrapper > h1{
+
+    height: 100%;
+    width: 10%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0.65rem 1rem;
+}
+
+.edit-profile-header-wrapper > h3{
+    
+    width: 90%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 1rem;
+}
+
+.edit-profile-acc-info{
+    position: absolute;
+    top: 5%;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.edit-profile-acc-info-wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    max-width: 380px;
+}
+
+.profile-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.profile-info>input{
+    border-style: none;
+    border-bottom: 1px solid var(--primary-color);
+    background-color: transparent;
+    outline: none;
+    transition: 0.3s ease-in;
+}
+
+.profile-info> input:focus{
+    -webkit-box-shadow:0 1px 0 #024747;
+    -moz-box-shadow:0 1px 0 #024747;
+    box-shadow:0 1px 0 #234141;
+}
+
+.edit-profile-acc-info-wrapper > h2{
+    padding-left: 10px;
+    padding-top: 1.3rem;
+    font-size: 1.3rem;
+    color: var(--primary-color);
+}
+
+.edit-profile-acc-info-wrapper > h5{
+    text-align: center;
+    color: red;
+    cursor: pointer;
+}
+
+#sav_chngs{
+    color: grey;
+    padding: 1rem;
+    transition: 0.3s ease-in;
+    cursor: pointer;
 }
