--- a/ShuttleOff/www/css/reservation.css
+++ b/ShuttleOff/www/css/reservation.css
@@ -330,6 +330,30 @@ body{
     display: block;
 }
 
+.pane2-content-wrap > span{
+    position: absolute;
+    height: 100%;
+    width: 20%;
+    top: 0;
+    right: -20%;
+
+    display: flex;
+    background-color: var(--primary-color);
+    justify-content: center;
+    align-items: center;
+
+    transition: 0.3s ease-out;
+}
+
+.pane2-content-wrap > span > i{
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+.pane2-content:focus > .pane2-content-wrap > span{
+    right: 0;
+}
+
 .empty-pane{
     display: flex;
     width: 100%;
@@ -337,4 +361,145 @@ body{
     justify-content: center;
     align-items: center;
     color: var(--primary-color);
+}
+.review-mod{
+
+    position: absolute;
+    /*display: flex;*/
+    display: none;
+
+    align-items: center;
+    justify-content: center;
+
+    top:0;
+    height: 100%;
+    width: 100%;
+
+    background-color: rgba(0,0,0,0.7);
+}
+
+.rv-mod-wr{
+    width: 80%;
+    height: 60%;
+    background-color: var(--primary-color);
+    position: relative;
+}
+
+.rv-mod-hd{
+    position: absolute;
+    top: 0;
+    height: 20%;
+    width: 100%;
+}
+
+.rv-mod-hd-wr{
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: whitesmoke;
+}
+
+.rv-mod-body{
+    position: absolute;
+    top: 20%;
+    height: 60%;
+    width: 100%;
+
+    background-color:var(--secondary-color);
+}
+
+.rv-mod-bod-wr{
+    width: 100%;
+    height: 100%;
+
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.rv-mod-bod-wr > h3{
+    font-size: 1.3rem;
+}
+
+.star-cont{
+    width: 100%;
+    display: flex;
+}
+
+.star-wrap{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.star-wrap > i{
+    margin-left: 0.5rem;
+    cursor: pointer;
+    color: var(--primary-color);
+}
+
+
+.rv-mod-bod-wr > textarea{
+    width: 80%;
+
+    resize: none;
+
+    border: none;
+    border-bottom: 3px solid var(--primary-color);
+    outline: none;
+    background-color: var(--secondary-color);
+    padding: 0.1rem 0.3rem;
+
+    cursor: pointer;
+
+    transition: 0.2 ease-in;
+}
+
+.rv-mod-btn-cont{
+    position: absolute;
+    top: 80%;
+    height: 20%;
+    width: 100%;
+}
+
+.rv-mod-btn-wr{
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    background-color: var(--secondary-color);
+}
+
+.rv-btn{
+    width: 45%;
+    height: 80%;
+
+    background-color: transparent;
+
+    border: 2px solid var(--primary-color);
+    border-radius: 10px;
+
+    cursor: pointer;
+    outline: none;
+    
+    transition: 0.1s ease-out;
+}
+
+.rv-btn:active{
+    background-color: #18c26d;
+    transform:translate(0,3px);
 }
